focused reproduction for static frameworks + rn69 issue